Fix overlapping dropdowns

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -48,6 +48,8 @@
     margin-left: 45px;
     font-weight: 400;
     font-size: 14px;
+    margin-top: 0px;
+    margin-bottom: 25px;
 }
 
 .popover {
